tests/warn/call2.jo
def foo(x: Int): Unit = println x

def bar(x: Int): Unit =
  foo  // error
  println x

def main =
  bar    // error
  println 10
